fix annoying misaligned input boxes

--- a/static/style.css
+++ b/static/style.css
@@ -452,3 +452,40 @@ button[type=submit]:hover {
   text-align: justify;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+div {
+  margin-bottom: 10px;
+}
+
+label {
+  width: 120px; 
+  display: inline-block;
+  text-align: right;
+  margin-right: 10px;
+}
+
+input[type="text"] {
+  width: 300px; 
+  padding: 5px;
+  border: 2px solid aquamarine;
+  border-radius: 4px;
+}
+
+button[type="submit"] {
+  background-color: aquamarine;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: hotpink;
+}
+
